Add github copilot settings

--- a/settings.json
+++ b/settings.json
@@ -129,5 +129,11 @@
   "git.openRepositoryInParentFolders": "never",
   "tailwindCSS.experimental.classRegex": [
     ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
-  ]
+  ],
+  "github.copilot.enable": {
+    "*": true,
+    "plaintext": false,
+    "markdown": true,
+    "scminput": false
+  }
 }
